fix 3: updated path with output directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
+  "outputDirectory": "dist/ngprepinterview/browser",
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "./browser/index.html"
+    { 
+      "source": "/(.*)", 
+      "destination": "/index.html" 
     }
   ]
 }
