--- a/ng-frontend/angular.json
+++ b/ng-frontend/angular.json
@@ -6,7 +6,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "ngprepinterview": {
+    "postair": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -61,10 +61,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "ngprepinterview:build:production"
+              "buildTarget": "postair:build:production"
             },
             "development": {
-              "buildTarget": "ngprepinterview:build:development"
+              "buildTarget": "postair:build:development"
             }
           },
           "defaultConfiguration": "development"
