--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -22,9 +22,12 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
