--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -31,6 +31,9 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "dotenv": "^16.0.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^6.3.4",
+    "vitest": "^0.34.6"
   }
 }
