fix: vercel.json config deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "outputDirectory": "dist/ngprepinterview/browser",
+  "outputDirectory": "dist/postair/browser",
   "rewrites": [
-    { 
-      "source": "/(.*)", 
-      "destination": "/index.html" 
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
